force-app/main/default/objects/LoginLocation__c/LoginLocation__c.object-meta.xml
<CustomObject>
    <label>Login Location</label>
    <nameField>
        <displayFormat>LL-{000000}</displayFormat>
        <label>Login Location ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Login Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>