force-app/main/default/objects/LoginLocation__c/fields/IPAddress__c.field-meta.xml
<CustomField>
    <fullName>IPAddress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IP Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>